tests/should_fail/match_bool_on_float_value.nv
module fail
// Bool pattern on a float match — type mismatch
let f = 3.14
let r = match f {
    true => "bad",
    _ => "ok",
}
